# a2048rs

./: .gitignore  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/fr000gs/a2048rs/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/fr000gs/a2048rs/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/rust/: Cargo.toml  compile.sh
app/src/main/rust/src/: lib.rs
app/src/test/java/com/fr000gs/a2048rs/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
